<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_home"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="412dp"
            android:layout_height="54dp"
            android:id="@+id/cntDtFrom" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/message" app:layout_constraintStart_toStartOf="parent"
    >
        <TextView
                android:text="@string/title_dtFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblDtFrom" android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/txtDtFrom" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="411dp"
            android:layout_height="52dp"
            android:id="@+id/cntDtTo"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cntDtFrom"
            app:layout_constraintStart_toStartOf="parent"
    >
        <TextView
                android:text="@string/title_dtTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/lblDtTo" android:layout_weight="1"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/txtDtTo" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:text="@string/title_btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSearch"
            android:visibility="visible" app:layout_constraintStart_toStartOf="@+id/cntDtTo"
            android:layout_marginLeft="156dp" android:layout_marginStart="156dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/cntDtTo"/>
    <android.support.v7.widget.CardView
            android:layout_width="411dp"
            android:layout_height="209dp"
            android:id="@+id/vewBookable" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSearch" app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="125dp">
            <TextView
                    android:text="@string/title_bookableHoltel"
                    android:layout_width="match_parent"
                    android:layout_height="39dp" android:id="@+id/lblBookableHotel"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/title_bookableCharge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lblBookableCharge" android:textSize="18sp"/>
            <TextView
                    android:text="@string/title_bookableOption1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lblBookableOption1"/>
            <TextView
                    android:text="@string/title_bookableOption2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lblBookableOption2"
            />
            <TextView
                    android:text="@string/title_bookableOption3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/lblBookableOption3"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <Button
            android:text="@string/title_btnBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBooking"
            app:layout_constraintStart_toStartOf="@+id/vewBookable"
            android:layout_marginLeft="156dp" android:layout_marginStart="156dp" android:layout_marginTop="144dp"
            app:layout_constraintTop_toTopOf="@+id/vewBookable"/>

</android.support.constraint.ConstraintLayout>