<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            card_view:cardCornerRadius="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:id="@+id/cardView">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/lblBookableHotel"
                    android:text="@string/title_bookableHoltel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" android:background="@android:color/darker_gray" android:paddingLeft="10dp"/>
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TableRow android:layout_width="match_parent"
                          android:layout_height="match_parent">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="120dp"
                            android:layout_height="match_parent" android:layout_marginLeft="5dp">
                        <TextView
                                android:id="@+id/lblBookableCharge"
                                android:text="@string/title_bookableCharge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"/>
                        <TextView
                                android:text="@string/title_bookableRoomCount"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" android:id="@+id/lblBookableRoomCount"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="160dp"
                            android:layout_height="match_parent" android:layout_marginLeft="5dp">
                        <TextView
                                android:id="@+id/lblBookableOption1"
                                android:text="@string/title_bookableOption1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/lblBookableOption2"
                                android:text="@string/title_bookableOption2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:id="@+id/lblBookableOption3"
                                android:text="@string/title_bookableOption3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="100dp"
                            android:layout_height="match_parent" android:layout_marginLeft="5dp">
                        <Button
                                android:id="@+id/btnBooking"
                                android:text="@string/title_btnBooking"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
